dotnet-coreweb-app/dotnetcorewebapp-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetcorewebapp
  labels:
    app: dotnetcorewebapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dotnetcorewebapp
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: dotnetcorewebapp
    spec:
      containers:
        - name: dotnetcorewebapp
          image: zikrillah/aspnet:3.0-buster-slim
          ports:
            - containerPort: 80
              name: web

---
apiVersion: v1
kind: Service
metadata:
  name: dotnetcorewebapp-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: dotnetcorewebapp
